_notes/errbyfile/O00000OO00000.java.txt
ru\metaculture\protection\O00000OO00000.java:385: error: cannot find 
symbol
               .filter(module -> module != null && module.O00000000000 != null && 
module.O00000000000.toLowerCase().contains(var1))
                                                         ^
  symbol:   variable O00000000000
  location: variable module of type Object

ru\metaculture\protection\O00000OO00000.java:385: error: cannot find 
symbol
               .filter(module -> module != null && module.O00000000000 != null && 
module.O00000000000.toLowerCase().contains(var1))
                                                                                        ^
  symbol:   variable O00000000000
  location: variable module of type Object

ru\metaculture\protection\O00000OO00000.java:391: error: cannot find 
symbol
               .map(module -> module.O00000000000)
                                    ^
  symbol:   variable O00000000000
  location: variable module of type Object

ru\metaculture\protection\O00000OO00000.java:392: error: incompatible 
types: Object cannot be converted to String
               .orElse("");
                      ^

  ru\metaculture\protection\O00000OO00000.java:385: error: cannot find 
symbol
                 .filter(module -> module != null && module.O00000000000 != null && 
module.O00000000000.toLowerCase().contains(var1))
                                                           ^
    symbol:   variable O00000000000
    location: variable module of type Object

  ru\metaculture\protection\O00000OO00000.java:385: error: cannot find 
symbol
                 .filter(module -> module != null && module.O00000000000 != null && 
module.O00000000000.toLowerCase().contains(var1))
                                                                                          ^
    symbol:   variable O00000000000
    location: variable module of type Object

  ru\metaculture\protection\O00000OO00000.java:391: error: cannot find 
symbol
                 .map(module -> module.O00000000000)
                                      ^
    symbol:   variable O00000000000
    location: variable module of type Object

  ru\metaculture\protection\O00000OO00000.java:392: error: incompatible 
types: Object cannot be converted to String
                 .orElse("");
                        ^
